--- a/COP4814Assignment4/Assignment4/Asg4WebService/Web.config
+++ b/COP4814Assignment4/Assignment4/Asg4WebService/Web.config
@@ -5,7 +5,7 @@
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="false" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
@@ -15,7 +15,7 @@
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false"/>
+          <serviceDebug includeExceptionDetailInFaults="true"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
